[gd_scene load_steps=4 format=3 uid="uid://uth4do3uvkj0"]

[ext_resource type="Script" path="res://scripts/crosshair.gd" id="1_gpuer"]
[ext_resource type="Theme" uid="uid://dd0e81wrg6csi" path="res://themes/custom_theme.tres" id="2_ijdfs"]
[ext_resource type="Script" path="res://scripts/debug.gd" id="3_ma2j3"]

[node name="PlayerInterface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Crosshair" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gpuer")
color = Color(0.258824, 0.960784, 0.807843, 1)

[node name="Top" type="Line2D" parent="Crosshair"]
points = PackedVector2Array(0, -5, 0, -15)
width = 2.0

[node name="Right" type="Line2D" parent="Crosshair"]
points = PackedVector2Array(5, 0, 15, 0)
width = 2.0

[node name="Bottom" type="Line2D" parent="Crosshair"]
points = PackedVector2Array(0, 5, 0, 15)
width = 2.0

[node name="Left" type="Line2D" parent="Crosshair"]
points = PackedVector2Array(-5, 0, -15, 0)
width = 2.0

[node name="DebugPanel" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 210.0
offset_bottom = 32.065
theme = ExtResource("2_ijdfs")
script = ExtResource("3_ma2j3")

[node name="MarginContainer" type="MarginContainer" parent="DebugPanel"]
layout_mode = 2

[node name="PropertyContainer" type="HBoxContainer" parent="DebugPanel/MarginContainer"]
layout_mode = 2

[node name="KeyContainer" type="VBoxContainer" parent="DebugPanel/MarginContainer/PropertyContainer"]
layout_mode = 2

[node name="ValueContainer" type="VBoxContainer" parent="DebugPanel/MarginContainer/PropertyContainer"]
layout_mode = 2
